--- a/src/components/HomePage/Expertise/Expertise.module.scss
+++ b/src/components/HomePage/Expertise/Expertise.module.scss
@@ -142,7 +142,8 @@
 
         img {
           width: 100%;
-          height: auto;
+          height: 100%;
+          object-fit: cover;
           border-radius: v.$br;
           box-shadow: v.$bs-type1;
         }
