--- a/src/components/HomePage/Expertise/Expertise.module.scss
+++ b/src/components/HomePage/Expertise/Expertise.module.scss
@@ -134,8 +134,10 @@
         justify-content: center;
         width: 100%;
         aspect-ratio: 16/9;
+        margin-bottom: 8px;
 
         @media(min-width: v.$lg) {
+          margin-bottom: 0;
           max-width: 702px;
           justify-content: flex-start;
         }
