feat: Created cookie banner.

--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -3,6 +3,7 @@ $dark  : #1B1B1B;
 $gray  : #CECECE;
 $white : #FAFFFD;
 $accent: #F44324;
+$green : #4caf50;
 $accent-transparent: rgba(244, 67, 36, 0.7);
 $dark-transparent  : rgba(255, 255, 255, 0.10);
 $color-grad: radial-gradient(164.92% 140.32% at -4.23% -6.74%, rgba(255, 255, 255, 0.50) 4.45%, rgba(255, 233, 216, 0.00) 36.18%, rgba(202, 234, 255, 0.17) 69.67%, rgba(255, 209, 214, 0.50) 100%);
