--- a/src/components/HomePage/Hero/Hero.module.scss
+++ b/src/components/HomePage/Hero/Hero.module.scss
@@ -1,4 +1,5 @@
 @use '../../../scss/vars/vars' as v;
+@use '../../../scss/mixins/typography' as t;
 @use '../../../scss/mixins/typography' as m;
 
 .hero {
@@ -75,23 +76,7 @@
     }
 
     h1 {
-      max-width: 750px;
-      color: v.$white;
-      font-family: v.$ff-r;
-      font-size: v.$fs-3xl;
-      font-style: normal;
-      font-weight: v.$fw-bold;
-      line-height: v.$lh-title;
-      text-transform: uppercase;
-      word-break: keep-all;
-
-      @media(min-width: v.$md) {
-        font-size: v.$fs-4xl;
-      }
-
-      @media(min-width: v.$xl) {
-        font-size: v.$fs-5xl;
-      }
+      @include t.h1();
     }
 
     p {
