--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -258,7 +258,7 @@
     padding: 40px 20px 80px 20px;
     overflow-y: auto;
     transform: translateY(calc(100% + 68px));
-    background-image: url("/blocks1.svg");
+    background-image: url("/images/blocks1.svg");
     background-repeat: no-repeat;
     background-position: right bottom;
     background-size: cover;
