--- a/src/components/PortfolioItem/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem/PortfolioItem.module.scss
@@ -32,9 +32,10 @@
 
   &Img {
     width: 100%;
-    height: auto;
+    min-height: 240px;
     overflow: hidden;
     position: relative;
+    aspect-ratio: 16/9;
 
     &:hover {
       img {
@@ -60,6 +61,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center;
       border-radius: v.$br;
       box-shadow: v.$bs-type1;
       transition: scale ease v.$tr;
