--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -122,20 +122,23 @@
     @extend %btn-base;
     padding: 8px 36px;
     border-radius: v.$br;
-    background-color: v.$dark;
-    color: v.$gray;
+    background-color: rgba(244, 67, 36, 0.62);
+    color: v.$black;
     font-family: v.$ff-r;
     font-size: v.$fs-xl;
     font-weight: v.$fw-regular;
     line-height: v.$lh;
     box-shadow: v.$bs-type1;
     position: relative;
+    transition: background-color ease v.$tr, color ease v.$tr;
 
     &:focus-visible {
       color: v.$accent;
     }
 
     &:active {
+      color: v.$white;
+
       &:before {
         animation-duration: 3s;
       }
